[gd_scene load_steps=10 format=1]

[ext_resource path="res://game/scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Backgrounds/starfield.png" type="Texture" id=2]
[ext_resource path="res://game/scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/expl1.wav" type="Sample" id=4]
[ext_resource path="res://assets/expl2.wav" type="Sample" id=5]
[ext_resource path="res://assets/expl3.wav" type="Sample" id=6]
[ext_resource path="res://assets/SimpleBeat.ogg" type="AudioStream" id=7]
[ext_resource path="res://game/scenes/HUD.tscn" type="PackedScene" id=8]

[sub_resource type="SampleLibrary" id=1]

samples/expl1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/expl2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/expl3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="Main" type="Node"]

process/pause_mode = 1
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 520.024, 290.547 )
transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="spawn_locations" type="Node" parent="."]

editor/display_folded = true

[node name="1" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 536.679, 495.966 )

[node name="2" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 549.633, 57.3692 )

[node name="3" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 109.186, 283.145 )

[node name="4" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 934.562, 307.203 )

[node name="5" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 185.062, 512.621 )

[node name="6" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 901.251, 98.0828 )

[node name="7" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 122.141, 111.037 )

[node name="8" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 947.516, 542.231 )

[node name="asteroid_container" type="Node" parent="."]

[node name="explosions" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="reset_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="enemy_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]

[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]


